# cgreedy

./: CMakeLists.txt  PreLoad.cmake  README.md  main_cgreedy.py
cgreedy/mac_arm64/: libcgreedy.dylib
cgreedy/mac_x86/: libcgreedy.dylib
src/: CMakeLists.txt  wrapper.cpp  wrapper.h
wheel_build/: setup.py
